--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="hiram.vendimia">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -19,7 +20,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.ContainerActivity"></activity>
+        <activity android:name=".activities.ContainerActivity" />
+        <activity android:name=".activities.PopUpActivity"
+            android:theme="@style/AppTheme.CustomTheme"
+            >
+        </activity>
     </application>
 
 </manifest>
